Fixed width overflow

--- a/gallery/form/1.1/uploader/themes/imageUploader/style.css
+++ b/gallery/form/1.1/uploader/themes/imageUploader/style.css
@@ -37,7 +37,7 @@
     z-index: 10;
     margin-bottom: 40px;
     overflow: hidden;
-    width:650px;
+    width:660px;
 }
 .imageUploader-queue .tips{
     position: absolute;
